# agent-console

./: .gitignore  .prettierignore  README.md  TESTIGO.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  snap.yml
docs/: LANDING_SHOTLIST.md  aur-publish.md  index.html  pairing-protocol.md  snap-classic-request.md  threat-model-voice-companion.md
docs/manual/: index.html
docs/shots/: README.md
launcher/: README.md  package.json
packaging/aur/: PKGBUILD
scripts/: pr-proof.sh
snap/: snapcraft.yaml
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: posttooluse-hook.cjs  pretool-hook.cjs  pretooluse-hook.cjs  stop-hook.cjs  userprompt-hook.cjs
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: advisor.rs  chat.rs  context.rs  feedback.rs  git.rs  hooks.rs  jira.rs  learning.rs  mcp.rs  mod.rs  notes.rs  pairing.rs  palette.rs  permission.rs  permissions.rs  plugins.rs  preflight.rs  project.rs  projects.rs  roundtable.rs  scheduler.rs  sessions.rs  skills.rs  snapshot.rs  task.rs  terminal.rs  testigo.rs  usage.rs  vault.rs  voice.rs  workspace_archive.rs  worktree.rs
src-tauri/src/services/: activity_service.rs  advisor_service.rs  agent_session.rs  claude_cli.rs  context_service.rs  engine_runner.rs  feedback_service.rs  git_service.rs  git_watcher.rs  hooks_service.rs  jira_service.rs  learning_service.rs  mcp_service.rs  memory_service.rs  mod.rs  notes_service.rs  paired_devices_service.rs  pairing_service.rs  palette_service.rs  permission_bridge.rs  permissions_service.rs  persistence.rs  plugins_service.rs  proc.rs  project_manager.rs  projects_service.rs  roundtable_service.rs  scheduler_service.rs  secure_channel.rs  sessions_service.rs  skills_service.rs  snapshot_service.rs  task_service.rs  terminal_runner.rs  testigo_export.rs  testigo_service.rs  testigo_timestamp.rs  transport.rs  usage_service.rs  vault_service.rs  (+4 more)
src-tauri/tests/fixtures/: freetsa-granted.tsr
src/agents/: profiles.test.ts  profiles.ts
src/components/: AboutModal.tsx  AdvisorPanel.tsx  AgendaPanel.tsx  AgentChat.tsx  ApprovalModal.tsx  BranchSwitcher.tsx  ChangeTree.tsx  ChangesList.tsx  ChangesView.tsx  CommandPalette.tsx  Composer.tsx  ConstraintsEditor.tsx  ContextPanel.tsx  DevicesPanel.tsx  DiffViewer.tsx  ExportImportPanel.tsx  FeedbackPanel.tsx  FileInspector.tsx  FileTree.tsx  GettingStartedModal.tsx  Icon.tsx  JiraPanel.tsx  LearningPanel.tsx  LeftSidebar.tsx  MarkdownText.tsx  McpPanel.tsx  Modal.tsx  ModeSelector.tsx  NotesPanel.tsx  OnboardingBanner.tsx  PanelError.tsx  PermissionModal.tsx  PermissionsPanel.tsx  PluginsPanel.tsx  Preview.tsx  ProjectPicker.tsx  ProofPanel.tsx  RoomsList.tsx  RoundtablePanel.tsx  SchedulerPanel.tsx  (+15 more)
src/hooks/: useKeyboardShortcuts.ts  useVoicePtt.ts
src/ipc/: githubRelease.ts  tauri.ts  updater.ts
src/lib/: agenda.test.ts  agenda.ts  jira.test.ts  jira.ts  loginSession.ts  notify.ts  reportProblem.test.ts  reportProblem.ts  startSessionForIssue.test.ts  startSessionForIssue.ts  termInput.ts  workbenchTabs.ts
src/permissions/: rules.test.ts  rules.ts  types.ts
src/stores/: advisorStore.ts  agentStatusStore.test.ts  agentStatusStore.ts  approvalStore.test.ts  approvalStore.ts  changesStore.test.ts  changesStore.ts  chatStore.ts  contextStore.ts  feedbackStore.ts  jiraStore.test.ts  jiraStore.ts  learningStore.test.ts  learningStore.ts  mcpStore.ts  modelStore.test.ts  modelStore.ts  notesStore.test.ts  notesStore.ts  onboardingStore.test.ts  onboardingStore.ts  pairingStore.ts  paletteStore.test.ts  paletteStore.ts  permissionsStore.test.ts  permissionsStore.ts  pinsStore.test.ts  pinsStore.ts  pluginsStore.ts  preflightStore.ts  (+24 more)
(+7 files in other folders)
