[package]
name = "agent-console"
version = "0.26.1"
description = "Agent Console — minimalist AI-native console IDE"
authors = ["Carlos Castillo"]
edition = "2021"

[lib]
name = "agent_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
walkdir = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
portable-pty = "0.8"
dirs = "5"
notify = "6"
notify-debouncer-mini = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Secure pairing / E2E channel (mobile voice companion). snow = the vetted Rust
# implementation of the Noise Protocol Framework — we do NOT roll our own crypto.
snow = "0.9"
rand = "0.8"
data-encoding = "2"
# QR rendering for the pairing offer (SVG only; image backend disabled).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
