[package]
name = "agent-console"
version = "0.60.0"
description = "Agent Console — minimalist AI-native console IDE"
authors = ["Carlos Castillo"]
edition = "2021"

[lib]
name = "agent_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
ed25519-dalek = "2"
base64 = "0.22"
getrandom = "0.2"
regex = "1"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
walkdir = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
portable-pty = "0.8"
dirs = "5"
notify = "6"
notify-debouncer-mini = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
cpal = "0.18"
whisper-rs = "0.16"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2.4.3"

[dev-dependencies]
# `test` unlocks tauri::test::{mock_builder, MockRuntime} for the terminal
# lifecycle tests. Dev-only: release builds never enable it.
tauri = { version = "2", features = ["test"] }
